--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body {
 .card {
   width: 90vmin;
   height: 70vmin;
-  position: relative;
+  position: relative;  
 }
 
 .card-back {
@@ -79,9 +79,9 @@ body {
   transition: all 3s;
   transform-style: preserve-3d;
   backface-visibility: hidden;
-  box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 0 30px rgba(0, 0, 0, 0.1); */
   overflow: hidden;
-  
+  box-shadow: 4vmin 3vmin 2vmin -1vmin #0000008c;
 }
 
 .card-front {
@@ -210,6 +210,7 @@ main {
 .greeting {
 	width: 44vmin;
 	height: auto;
+  filter: drop-shadow(0 0 1vmin white);
 }
 .greeting__merry {
 	animation: merry 1.5s 1.2s cubic-bezier(0.1,0,0.9,1) forwards;
@@ -241,6 +242,7 @@ main {
 	margin-bottom: 0.5em;
 	width: 30vmin;
 	height: auto;
+  filter: drop-shadow(0 0 2vmin #1d99197e);
 }
 .holly__berry {
 	animation: berry1 0.3s ease-in-out forwards;
@@ -405,7 +407,8 @@ main {
 .card-back {
   background-image:
   repeating-linear-gradient(45deg, rgb(189, 9, 45) 0%, rgb(223, 33, 71) 2.5%, #057905 2.5%, #22c222 6%);
-  box-shadow: inset 0 2.5vmin 2.5vmin rgba(0,0,0, 0.125);
+  box-shadow: inset 0 2.5vmin 2.5vmin rgba(0,0,0, 0.125),
+                4vmin 3vmin 2vmin -1vmin #0000008c;
 
   &::after {
     content: "";
@@ -446,7 +449,7 @@ main {
   border-radius: 50%;
   filter: drop-shadow(0 0 9px white);
   box-shadow: 0 0 0.7vmin 0.2vmin #ffffff;
-  z-index: 9999999;
+  z-index: 9999;
 }
 /* Snow fall end */
 .footer{
@@ -454,7 +457,6 @@ main {
   left:0;
   bottom:0;
   width: auto;
-
   color: #ffffff98;
   padding: 1vmin;
 }
@@ -468,7 +470,7 @@ main {
   top: 40%;
   left: 50%;
   background-color: #faf744e3;
-  box-shadow: 0 0 8vmin 3vmin #fffc3e65;
+  box-shadow: 0 0 4vmin 3vmin #fffc3e65;
   border-radius: 100%;
   overflow: hidden;
   content: "";
@@ -701,7 +703,8 @@ main {
   position: relative;
   width: 10vmin;
   height: 10vmin;
-  box-shadow: 0vmin 0.5vmin 0.2vmin rgba(0, 0, 0, 0.2);
+  box-shadow: 0vmin 0.5vmin 0.5vmin 0.2vmin rgba(0, 0, 0, 0.438),
+              0vmin 0vmin 3vmin 1vmin #fdba6ec9;
   border-radius: 100%;
   border: 0.1vmin solid #ff5500;
   background-color: #cd4626;
@@ -756,7 +759,8 @@ main {
   border-radius: 100%;
   background-color: #fe9e26;
   border: 0.1vmin solid #ffd500;
-  box-shadow: 0vmin 0.5vmin 0.2vmin rgba(0, 0, 0, 0.2);
+  box-shadow: 0vmin 0.5vmin 0.2vmin rgba(0, 0, 0, 0.2),
+              0vmin 0vmin 3vmin 1vmin #e8f858a6;
   background-image: radial-gradient(100% 115% at 25% 25%, #fff, transparent 33%), radial-gradient(15% 15% at 75% 75%, #ffea80, transparent), radial-gradient(100% 100% at 50% 25%, transparent, #ffe666 98%);
 }
 .ornaments .ornament-box:nth-child(2) > .ornament > .face > .eyes {
@@ -808,11 +812,12 @@ main {
   transform-origin: top;
 }
 .ornaments .string:after {
-  width: 1.2vmin;
+  width: 1.7vmin;
   height: 1.2vmin;
   background-color: #ff8da1;
+  box-shadow: 0 0 0.1vmin 0.2vmin #fadce1b6;
   top: 60%;
-  left: -80%;
+  left: -0.8vmin;
   content: "";
   position: absolute;
 }
@@ -1004,7 +1009,7 @@ main {
   top: 1vmin;
   left: 0;
   background-color: #e1ffbc;
-  box-shadow: 0vmin 0vmin 1vmin #e1ffbc;
+  box-shadow: 0vmin 0vmin 2vmin 1vmin #e1ffbc;
   content: "";
   position: absolute;
 }
@@ -1012,7 +1017,7 @@ main {
   top: 1.05vmin;
   left: 5vmin;
   background-color: #fdf8d1;
-  box-shadow: 0vmin 0vmin 1vmin #fdf8d1;
+  box-shadow: 0vmin 0vmin 2vmin 1vmin #fdf8d1;
   content: "";
   position: absolute;
 }
@@ -1020,7 +1025,7 @@ main {
   top: 1.1vmin;
   left: 10vmin;
   background-color: #e1ffbc;
-  box-shadow: 0vmin 0vmin 1vmin #e1ffbc;
+  box-shadow: 0vmin 0vmin 2vmin 1vmin #e1ffbc;
   content: "";
   position: absolute;
 }
@@ -1028,7 +1033,7 @@ main {
   top: 1.15vmin;
   left: 15vmin;
   background-color: #ffd5f7;
-  box-shadow: 0vmin 0vmin 1vmin #ffd5f7;
+  box-shadow: 0vmin 0vmin 2vmin 1vmin #ffd5f7;
   content: "";
   position: absolute;
 }
@@ -1036,19 +1041,19 @@ main {
   top: 1.2vmin;
   left: 20vmin;
   background-color: #c4f4ff;
-  box-shadow: 0vmin 0vmin 1vmin #c4f4ff;
+  box-shadow: 0vmin 0vmin 2vmin 1vmin #c4f4ff;
 }
 .lights .cord .light:nth-child(6), .lights-3 .cord .light:nth-child(6), .lights-2 .cord .light:nth-child(6) {
   top: 1.25vmin;
   left: 25vmin;
   background-color: #fdf8d1;
-  box-shadow: 0vmin 0vmin 1vmin #fdf8d1;
+  box-shadow: 0vmin 0vmin 2vmin 1vmin #fdf8d1;
 }
 .lights .cord .light:nth-child(7), .lights-3 .cord .light:nth-child(7), .lights-2 .cord .light:nth-child(7) {
   top: 1.3vmin;
   left: 30vmin;
   background-color: #ffd5f7;
-  box-shadow: 0vmin 0vmin 1vmin #ffd5f7;
+  box-shadow: 0vmin 0vmin 2vmin 1vmin #ffd5f7;
 }
 
 .dip {
@@ -2078,3 +2083,40 @@ main {
  
 
 /* santa front card end */
+
+/* button mute */
+#muteaudio{
+  position: absolute;
+  top: 1vmin;
+  left: 1vmin;
+  width: 6vmin;
+  height: 6vmin;
+  font-size: 2.5vmin;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background: none;
+  color: rgb(255, 255, 255);
+  border: none;
+  outline: none;
+  opacity: 0.4;
+  cursor: pointer;
+  transition: all 0.4s ease-out;
+  z-index: 9999;
+}
+#muteaudio > i{
+  animation: keyframes-fill 0.5s;
+}
+/* ------ Animation ------ */
+@keyframes keyframes-fill {
+  0% {
+    transform: rotate(0deg) scale(0);
+    opacity: 0;
+  }
+
+  50% {
+    transform: rotate(-10deg) scale(1.2);
+  }
+}
+/* button mute end */
