--- a/css/style.css
+++ b/css/style.css
@@ -699,7 +699,7 @@ main {
   position: absolute;
 }
 .ornaments .ornament-box:nth-child(1) > .ornament {
-  z-index: 2;
+  z-index: 5;
   position: relative;
   width: 10vmin;
   height: 10vmin;
@@ -710,6 +710,7 @@ main {
   background-color: #cd4626;
   background-image: radial-gradient(100% 100% at 25% 25%, #f1c0b4, transparent 33%), radial-gradient(15% 15% at 75% 75%, #ffaa80, transparent), radial-gradient(100% 100% at 50% 25%, transparent, #ff9966 98%);
   animation: fall 3s ease-in-out infinite;
+
 }
 .ornaments .ornament-box:nth-child(1) > .ornament > .face > .eyes {
   left: 0.8vmin;
@@ -752,7 +753,7 @@ main {
   position: absolute;
 }
 .ornaments .ornament-box:nth-child(2) > .ornament {
-  z-index: 2;
+  z-index: 5;
   position: relative;
   width: 10vmin;
   height: 10vmin;
@@ -2086,12 +2087,12 @@ main {
 
 /* button mute */
 #muteaudio{
-  position: absolute;
-  top: 1vmin;
-  left: 1vmin;
-  width: 6vmin;
-  height: 6vmin;
-  font-size: 2.5vmin;
+  position: fixed;
+  top: 2vmin;
+  left: 2vmin;
+  width: 8vmin;
+  height: 8vmin;
+  font-size: 5vmin;
   display: flex;
   align-items: center;
   justify-content: center;
