--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oooh+Baby');
 @import url('https://fonts.googleapis.com/css2?family=Grape+Nuts');
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
 
 * {
   box-sizing: border-box;
@@ -1341,8 +1342,8 @@ main {
 }
 .message-content{
   color: #ffffff;
-  font: normal 4.6vmin 'Dancing Script';
-  font-weight: 600;
+  font: normal 4.6vmin 'Caveat';
+  font-weight: 700;
   letter-spacing: 0.1vmin;
   word-wrap: break-word;
   text-overflow: ellipsis;
