--- a/css/style.css
+++ b/css/style.css
@@ -688,7 +688,7 @@ main {
   width: 100%;
   height: 40%;
   top: 40%;
-  z-index: 32;
+  z-index: 2;
   content: "";
   position: absolute;
 }
@@ -698,7 +698,6 @@ main {
   content: "";
   position: absolute;
   z-index: 30;
-
 }
 .ornaments .ornament-box:nth-child(1) {
   left: 18%;
@@ -717,7 +716,7 @@ main {
   background-color: #cd4626;
   background-image: radial-gradient(100% 100% at 25% 25%, #f1c0b4, transparent 33%), radial-gradient(15% 15% at 75% 75%, #ffaa80, transparent), radial-gradient(100% 100% at 50% 25%, transparent, #ff9966 98%);
   animation: fall 3s ease-in-out infinite;
-
+  opacity: 0.99;
 }
 .ornaments .ornament-box:nth-child(1) > .ornament > .face > .eyes {
   left: 0.8vmin;
@@ -761,6 +760,7 @@ main {
 }
 .ornaments .ornament-box:nth-child(2) > .ornament {
   z-index: 20;
+  opacity: 0.99;
   position: relative;
   width: 10vmin;
   height: 10vmin;
@@ -819,6 +819,7 @@ main {
   left: 4.8vmin;
   transform-origin: top;
   z-index: 10;
+  opacity: 0.99;
 }
 .ornaments .string:after {
   width: 1.7vmin;
@@ -830,6 +831,7 @@ main {
   content: "";
   position: absolute;
   z-index: 2;
+  opacity: 0.99;
 }
 .ornaments .face {
   width: 100%;
