--- a/css/style.css
+++ b/css/style.css
@@ -705,7 +705,8 @@ main {
   position: absolute; */
 }
 .ornaments .ornament-box:nth-child(1) > .ornament {
-  z-index: 21;
+  z-index: 30;
+  opacity: 0.99;
   position: relative;
   width: 10vmin;
   height: 10vmin;
@@ -716,9 +717,8 @@ main {
   background-color: #cd4626;
   background-image: radial-gradient(100% 100% at 25% 25%, #f1c0b4, transparent 33%), radial-gradient(15% 15% at 75% 75%, #ffaa80, transparent), radial-gradient(100% 100% at 50% 25%, transparent, #ff9966 98%);
   animation: fall 3s ease-in-out infinite;
-  opacity: 0.99;
-  transform: translate3d(0,0,2vmin);
-  -webkit-transform: translate3d(0,0,2vmin);
+  transform: translate3d(0,0,1vmin);
+  -webkit-transform: translate3d(0,0,1vmin);
 }
 .ornaments .ornament-box:nth-child(1) > .ornament > .face > .eyes {
   left: 0.8vmin;
@@ -824,6 +824,8 @@ main {
   transform-origin: top;
   z-index: 10;
   opacity: 0.99;
+  transform: translate3d(0,0,-1vmin);
+  -webkit-transform: translate3d(0,0,-1vmin);
 }
 .ornaments .string:after {
   width: 1.7vmin;
