--- a/css/style.css
+++ b/css/style.css
@@ -826,6 +826,8 @@ main {
   transform-origin: top;
   z-index: 10;
   opacity: 0.99;
+  transform: translate3d(0,0,-0.1vmin);
+  -webkit-transform: translate3d(0,0,-0.1vmin);
 }
 .ornaments .string:after {
   width: 1.7vmin;
