--- a/css/style.css
+++ b/css/style.css
@@ -753,10 +753,12 @@ main {
 }
 .ornaments .ornament-box:nth-child(1) > .string {
   animation: string-stretch 3s ease-in-out infinite;
-  transform: translate3d(0,0,-1vmin);
-  -webkit-transform: translate3d(0,0,-1vmin);
-  z-index: 20;
+  transform: translate3d(0,0,1vmin);
+  -webkit-transform: translate3d(0,0,1vmin);
+  z-index: 10;
   opacity: 0.99;
+  content: "";
+  position: absolute;
 }
 .ornaments .ornament-box:nth-child(2) {
   animation: pendulum 3s ease-in-out infinite;
