--- a/css/style.css
+++ b/css/style.css
@@ -705,8 +705,8 @@ main {
   position: absolute; */
 }
 .ornaments .ornament-box:nth-child(1) > .ornament {
-  z-index: 30;
-  opacity: 0.99;
+  z-index: 30 !important;
+  opacity: 0.99 !important;
   position: relative;
   width: 10vmin;
   height: 10vmin;
@@ -717,8 +717,8 @@ main {
   background-color: #cd4626;
   background-image: radial-gradient(100% 100% at 25% 25%, #f1c0b4, transparent 33%), radial-gradient(15% 15% at 75% 75%, #ffaa80, transparent), radial-gradient(100% 100% at 50% 25%, transparent, #ff9966 98%);
   animation: fall 3s ease-in-out infinite;
-  transform: translate3d(0,0,2vmin);
-  -webkit-transform: translate3d(0,0,2vmin);
+  transform: translate3d(0,0,2vmin) !important;
+  -webkit-transform: translate3d(0,0,2vmin) !important;
 }
 .ornaments .ornament-box:nth-child(1) > .ornament > .face > .eyes {
   left: 0.8vmin;
@@ -755,8 +755,8 @@ main {
   animation: string-stretch 3s ease-in-out infinite;
   transform: translate3d(0,0,1vmin);
   -webkit-transform: translate3d(0,0,1vmin);
-  z-index: 10;
-  opacity: 0.99;
+  z-index: 10 !important;
+  opacity: 0.99 !important;
   content: "";
   position: absolute;
 }
