--- a/css/style.css
+++ b/css/style.css
@@ -705,7 +705,7 @@ main {
   position: absolute; */
 }
 .ornaments .ornament-box:nth-child(1) > .ornament {
-  z-index: 30 !important;
+  z-index: 30 ;
   opacity: 0.99 !important;
   position: relative;
   width: 10vmin;
@@ -756,7 +756,7 @@ main {
   transform: translate3d(0,0,1vmin);
   -webkit-transform: translate3d(0,0,1vmin);
   z-index: 10 !important;
-  opacity: 0.99 !important;
+  opacity: 0.99;
   content: "";
   position: absolute;
 }
