--- a/css/style.css
+++ b/css/style.css
@@ -705,8 +705,8 @@ main {
   position: absolute; */
 }
 .ornaments .ornament-box:nth-child(1) > .ornament {
-  z-index: 30 !important;
-  opacity: 0.99 !important;
+  z-index: 30;
+  opacity: 0.99;
   position: relative;
   width: 10vmin;
   height: 10vmin;
