--- a/css/style.css
+++ b/css/style.css
@@ -755,8 +755,8 @@ main {
   animation: string-stretch 3s ease-in-out infinite;
   transform: translate3d(0,0,1vmin);
   -webkit-transform: translate3d(0,0,1vmin);
-  z-index: 10 ;
-  opacity: 0.99;
+  z-index: 10 !important;
+  opacity: 0.99 !important;
 }
 .ornaments .ornament-box:nth-child(2) {
   animation: pendulum 3s ease-in-out infinite;
