--- a/css/style.css
+++ b/css/style.css
@@ -755,7 +755,7 @@ main {
   animation: string-stretch 3s ease-in-out infinite;
   /*transform: translate3d(0,0,1vmin);
   -webkit-transform: translate3d(0,0,1vmin);*/
-  z-index: 29 ;
+  z-index: 29 !important;
   opacity: 0.99 !important;
 }
 .ornaments .ornament-box:nth-child(2) {
