--- a/css/style.css
+++ b/css/style.css
@@ -753,10 +753,10 @@ main {
 }
 .ornaments .ornament-box:nth-child(1) > .string {
   animation: string-stretch 3s ease-in-out infinite;
-  transform: translate3d(0,0,0) !important;
+  /*transform: translate3d(0,0,0) !important;
   -webkit-transform: translate3d(0,0,0)!important;
   z-index: 10 !important;
-  opacity: 0.99 !important;
+  opacity: 0.99 !important;*/
 }
 .ornaments .ornament-box:nth-child(2) {
   animation: pendulum 3s ease-in-out infinite;
