--- a/css/style.css
+++ b/css/style.css
@@ -705,8 +705,10 @@ main {
   position: absolute; */
 }
 .ornaments .ornament-box:nth-child(1) > .ornament {
-  z-index: 15 !important;
+  z-index: 20 !important;
   opacity: 0.99 !important;
+  transform: translate3d(0,0,1vmin);
+  -webkit-transform: translate3d(0,0,1vmin)
   position: relative;
   width: 10vmin;
   height: 10vmin;
@@ -824,7 +826,7 @@ main {
   transform: perspective(1vmin) rotateX(5deg);
   left: 4.8vmin;
   transform-origin: top;
-  z-index: 10;
+  z-index: 0;
   opacity: 0.99 !important;
 }
 .ornaments .string:after {
