--- a/css/style.css
+++ b/css/style.css
@@ -707,8 +707,8 @@ main {
 .ornaments .ornament-box:nth-child(1) > .ornament {
   z-index: 20 !important;
   opacity: 0.99 !important;
-  transform: translate3d(0,0,1vmin);
-  -webkit-transform: translate3d(0,0,1vmin)
+  transform: translate3d(0,0,10px);
+  -webkit-transform: translate3d(0,0,10px);
   position: relative;
   width: 10vmin;
   height: 10vmin;
@@ -826,8 +826,6 @@ main {
   transform: perspective(1vmin) rotateX(5deg);
   left: 4.8vmin;
   transform-origin: top;
-  z-index: -3;
-  opacity: 0.99 !important;
 }
 .ornaments .string:after {
   width: 1.7vmin;
