--- a/css/style.css
+++ b/css/style.css
@@ -688,7 +688,7 @@ main {
   width: 100%;
   height: 40%;
   top: 40%;
-  /*z-index: 30;*/
+  z-index: 2;
   content: "";
   position: absolute;
 }
@@ -697,7 +697,7 @@ main {
   top: -2vmin;
   content: "";
   position: absolute;
-  /*z-index: 30;*/
+  z-index: 30;
 }
 .ornaments .ornament-box:nth-child(1) {
   left: 18%;
@@ -705,10 +705,8 @@ main {
   position: absolute; */
 }
 .ornaments .ornament-box:nth-child(1) > .ornament {
-  z-index: 20 !important;
-  opacity: 0.99 !important;
-  transform: translate3d(0,0,10px);
-  -webkit-transform: translate3d(0,0,10px);
+  z-index: 30;
+  opacity: 0.99;
   position: relative;
   width: 10vmin;
   height: 10vmin;
@@ -719,6 +717,8 @@ main {
   background-color: #cd4626;
   background-image: radial-gradient(100% 100% at 25% 25%, #f1c0b4, transparent 33%), radial-gradient(15% 15% at 75% 75%, #ffaa80, transparent), radial-gradient(100% 100% at 50% 25%, transparent, #ff9966 98%);
   animation: fall 3s ease-in-out infinite;
+  transform: translate3d(0,0,2vmin);
+  -webkit-transform: translate3d(0,0,2vmin);
 }
 .ornaments .ornament-box:nth-child(1) > .ornament > .face > .eyes {
   left: 0.8vmin;
@@ -753,10 +753,8 @@ main {
 }
 .ornaments .ornament-box:nth-child(1) > .string {
   animation: string-stretch 3s ease-in-out infinite;
-  /*transform: translate3d(0,0,0) !important;
-  -webkit-transform: translate3d(0,0,0)!important;
-  z-index: 10 !important;
-  opacity: 0.99 !important;*/
+  transform: translate3d(0,0,-0.1vmin);
+  -webkit-transform: translate3d(0,0,-0.1vmin);
 }
 .ornaments .ornament-box:nth-child(2) {
   animation: pendulum 3s ease-in-out infinite;
@@ -826,6 +824,8 @@ main {
   transform: perspective(1vmin) rotateX(5deg);
   left: 4.8vmin;
   transform-origin: top;
+  z-index: 10;
+  opacity: 0.99;
 }
 .ornaments .string:after {
   width: 1.7vmin;
