--- a/css/style.css
+++ b/css/style.css
@@ -717,8 +717,8 @@ main {
   background-color: #cd4626;
   background-image: radial-gradient(100% 100% at 25% 25%, #f1c0b4, transparent 33%), radial-gradient(15% 15% at 75% 75%, #ffaa80, transparent), radial-gradient(100% 100% at 50% 25%, transparent, #ff9966 98%);
   animation: fall 3s ease-in-out infinite;
-  transform: translate3d(0,0,2vmin) !important;
-  -webkit-transform: translate3d(0,0,2vmin) !important;
+  transform: translate3d(0,0,2vmin);
+  -webkit-transform: translate3d(0,0,2vmin);
 }
 .ornaments .ornament-box:nth-child(1) > .ornament > .face > .eyes {
   left: 0.8vmin;
