--- a/css/style.css
+++ b/css/style.css
@@ -1206,12 +1206,18 @@ main {
 @keyframes fall {
   0% {
     transform: translateY(1.5vmin);
+    transform: translateZ(2vmin);
+    -webkit-transform: translateZ(2vmin);
   }
   50% {
     transform: translateY(0vmin);
+    transform: translateZ(2vmin);
+    -webkit-transform: translateZ(2vmin);
   }
   100% {
     transform: translateY(1.5vmin);
+    transform: translateZ(2vmin);
+    -webkit-transform: translateZ(2vmin);
   }
 }
 @keyframes blush {
