--- a/css/style.css
+++ b/css/style.css
@@ -1206,22 +1206,22 @@ main {
 @keyframes fall {
   0% {
     transform: translateY(1.5vmin);
-    transform: translateZ(1px);
-    -webkit-transform: translateZ(1px);
+    transform: translateZ(1vmin);
+    -webkit-transform: translateZ(1vmin);
     z-index: 30;
     opacity: 0.99;
   }
   50% {
     transform: translateY(0vmin);
-    transform: translateZ(1px);
-    -webkit-transform: translateZ(1px);
+    transform: translateZ(1vmin);
+    -webkit-transform: translateZ(1vmin);
     z-index: 30;
     opacity: 0.99;
   }
   100% {
     transform: translateY(1.5vmin);
-    transform: translateZ(1px);
-    -webkit-transform: translateZ(1px);
+    transform: translateZ(1vmin);
+    -webkit-transform: translateZ(1vmin);
     z-index: 30;
     opacity: 0.99;
   }
