--- a/css/style.css
+++ b/css/style.css
@@ -946,8 +946,8 @@ main {
     animation: string-stretch 3s ease-in-out infinite;
     transform: translateZ(-10px);
     -webkit-transform: translateZ(-10px);
-    z-index: 0;
-    opacity: 0.99;
+    z-index: -6 !important;
+    opacity: 0.99 !important;
 }
 
 .ornaments .ornament-box:nth-child(2) {
