--- a/css/style.css
+++ b/css/style.css
@@ -893,8 +893,8 @@ main {
 .ornaments .ornament-box:nth-child(1)>.ornament {
     z-index: 30;
     opacity: 0.99;
-    position: relative;
-    /* top: 5vmin; */
+    position: absolute;
+    top: 5vmin;
     width: 10vmin;
     height: 10vmin;
     box-shadow: 0vmin 0.5vmin 0.5vmin 0.2vmin rgba(0, 0, 0, 0.438), 0vmin 0vmin 3vmin 1vmin #fdba6ec9;
@@ -945,9 +945,12 @@ main {
 
 .ornaments .ornament-box:nth-child(1)>.string {
     animation: string-stretch 3s ease-in-out infinite;
-    /*transform: translateZ(-10px);
-    -webkit-transform: translateZ(-10px);*/
+    transform: translateZ(-10px);
+    -webkit-transform: translateZ(-10px);
     overflow: visible !important;
+    position: absolute;
+    z-index: 0;
+    opacity: 0.99;
 }
 
 .ornaments .ornament-box:nth-child(2) {
