--- a/css/style.css
+++ b/css/style.css
@@ -893,8 +893,7 @@ main {
 .ornaments .ornament-box:nth-child(1)>.ornament {
     z-index: 30;
     opacity: 0.99;
-    position: absolute;
-    top: 5vmin;
+    position: relative;
     width: 10vmin;
     height: 10vmin;
     box-shadow: 0vmin 0.5vmin 0.5vmin 0.2vmin rgba(0, 0, 0, 0.438), 0vmin 0vmin 3vmin 1vmin #fdba6ec9;
@@ -945,12 +944,6 @@ main {
 
 .ornaments .ornament-box:nth-child(1)>.string {
     animation: string-stretch 3s ease-in-out infinite;
-    transform: translateZ(-10px);
-    -webkit-transform: translateZ(-10px);
-    overflow: visible !important;
-    position: absolute;
-    z-index: 0;
-    opacity: 0.99;
 }
 
 .ornaments .ornament-box:nth-child(2) {
@@ -1027,7 +1020,7 @@ main {
     border: 0.2vmin solid #2a4930;
     border-radius: 20vmin;
     transform: perspective(1vmin) rotateX(5deg);
-    left: 4.8vmin;
+    left: 4.6vmin;
     transform-origin: top;
     z-index: 0;
     opacity: 0.99;
@@ -1039,7 +1032,7 @@ main {
     background-color: #ff8da1;
     box-shadow: 0 0 0.1vmin 0.2vmin #fadce1b6;
     top: 60%;
-    left: -0.8vmin;
+    left: -0.6vmin;
     content: "";
     position: absolute;
     z-index: 0;
