--- a/css/style.css
+++ b/css/style.css
@@ -887,12 +887,12 @@ main {
 .ornaments .ornament-box:nth-child(1) {
     animation: pendulum-2 3s ease-in-out infinite;
     left: 18%;
-    /* content: "";
-  position: absolute; */
+    content: "";
+    position: absolute;
 }
 
 .ornaments .ornament-box:nth-child(1)>.ornament {
-    z-index: 30;
+    z-index: 20;
     opacity: 0.99;
     position: relative;
     width: 10vmin;
