--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Grape+Nuts');
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Nanum+Brush+Script&family=Reenie+Beanie&display=swap');
 * {
     box-sizing: border-box;
 }
@@ -109,13 +110,45 @@ body {
 .greeting-top {
     align-self: flex-start;
     background-color: #ffffffa9;
-    border-radius: 2vmin;
+    border-radius: 1.7vmin;
+}
+
+#date {
+    font-family: "Covered By Your Grace", cursive;
+    font-weight: 500;
+    color: #c90000;
+    font-size: 6vmin;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.daysss {
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 600;
+    font-size: 4.8vmin;
+    color: #002705;
+    /* display: inline-block; */
+    position: relative;
+    margin-left: 1.5vmin;
+    top: 0.3vmin;
+}
+
+.dayleft {
+    font-family: "Dancing Script";
+    font-size: 4vmin;
+    font-weight: 500;
+    color: #002705;
+    /* display: inline-block; */
+    position: relative;
+    margin-left: 1.5vmin;
 }
 
 .greeting-top,
 .greeting-from-to {
     color: #002705;
-    padding: 1vmin;
+    padding: 0vmin 1vmin;
     font: normal 3vmin menlo, monaco, monospace;
     position: relative;
 }
@@ -134,15 +167,22 @@ body {
     background-color: #ffffffa9;
     border-radius: 2vmin;
     padding: 0.5vmin 1.5vmin;
+    display: inline-block;
+}
+
+.from p,
+.to p {
+    display: inline-block;
 }
 
 .n4me {
     font-family: "Oooh Baby", cursive;
-    font-weight: 400;
+    font-weight: 600;
     font-size: 4vmin;
     font-style: normal;
-    margin-top: 1vmin;
-    padding: 0 1vmin;
+    /* margin-top: 1vmin;
+    padding: 0 1vmin; */
+    display: inline-block;
 }
 
 .greeting-title {
