--- a/css/style.css
+++ b/css/style.css
@@ -934,6 +934,8 @@ main {
     content: "";
     position: absolute;
     z-index: 2;
+    transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
 }
 
 .ornaments .ornament-box:nth-child(1) {
@@ -955,8 +957,8 @@ main {
     background-color: #cd4626;
     background-image: radial-gradient(100% 100% at 25% 25%, #f1c0b4, transparent 33%), radial-gradient(15% 15% at 75% 75%, #ffaa80, transparent), radial-gradient(100% 100% at 50% 25%, transparent, #ff9966 98%);
     animation: fall 3s ease-in-out infinite;
-    transform: translateZ(1px);
-    -webkit-transform: translateZ(1px);
+    transform: translateZ(20px);
+    -webkit-transform: translateZ(20px);
 }
 
 .ornaments .ornament-box:nth-child(1)>.ornament>.face>.eyes {
@@ -1074,24 +1076,26 @@ main {
     height: 5vmin;
     border: 0.2vmin solid #2a4930;
     border-radius: 20vmin;
-    transform: perspective(1vmin) rotateX(5deg);
+    transform: rotateX(5deg) translateZ(-20px);
     left: 4.6vmin;
     transform-origin: top;
     z-index: 0;
     opacity: 0.99;
+    transform-style: preserve-3d;
 }
 
 .ornaments .string:after {
-    width: 1.7vmin;
-    height: 1.2vmin;
+    width: 3vmin;
+    height: 2vmin;
     background-color: #ff8da1;
     box-shadow: 0 0 0.1vmin 0.2vmin #fadce1b6;
-    top: 60%;
-    left: -0.6vmin;
+    top: 75%;
+    left: -1.2vmin;
     content: "";
     position: absolute;
     z-index: 0;
     opacity: 0.99;
+    transform: translateZ(2px) rotateX(-15deg)
 }
 
 .ornaments .face {
@@ -1517,29 +1521,29 @@ main {
 
 @keyframes string-stretch {
     0% {
-        transform: perspective(1vmin) rotateX(5deg) scaleY(1.3);
+        transform: rotateX(5deg) scaleY(1.3) translateZ(-20px);
     }
     50% {
-        transform: perspective(1vmin) rotateX(5deg) scaleY(1);
+        transform: rotateX(5deg) scaleY(1) translateZ(-20px);
     }
     100% {
-        transform: perspective(1vmin) rotateX(5deg) scaleY(1.3);
+        transform: rotateX(5deg) scaleY(1.3) translateZ(-20px);
     }
 }
 
 @keyframes fall {
     0% {
-        transform: translateY(1.7vmin);
+        transform: translateY(1.7vmin) translateZ(20px);
         /*transform: translateZ(1px);
     -webkit-transform: translateZ(1px);*/
     }
     50% {
-        transform: translateY(0vmin);
+        transform: translateY(0vmin) translateZ(20px);
         /*transform: translateZ(1px);
     -webkit-transform: translateZ(1px);*/
     }
     100% {
-        transform: translateY(1.7vmin);
+        transform: translateY(1.7vmin) translateZ(20px);
         /*transform: translateZ(1px);
     -webkit-transform: translateZ(1px);*/
     }
